--- a/packages/draft/pubspec.yaml
+++ b/packages/draft/pubspec.yaml
@@ -1,6 +1,6 @@
-name: immer
+name: draft
 description: A starting point for Dart libraries or applications.
-version: 1.0.0
+version: 0.0.1
 
 environment:
   sdk: ^3.6.0
