--- a/packages/draft/pubspec.yaml
+++ b/packages/draft/pubspec.yaml
@@ -6,9 +6,12 @@ version: 1.0.0
 environment:
   sdk: ^3.6.1
 
-# Add regular dependencies here.
 dependencies:
-  # path: ^1.8.0
+  analyzer: ">=7.0.0 <8.0.0"
+  build: ^2.3.1
+  source_gen: ^2.0.0
+  draft_annotation:
+    path: ../draft_annotation
 
 dev_dependencies:
   lints: ^5.0.0
