--- a/packages/draft_annotation/pubspec.yaml
+++ b/packages/draft_annotation/pubspec.yaml
@@ -1,14 +1,10 @@
 name: draft_annotation
 description: A starting point for Dart libraries or applications.
-version: 1.0.0
-# repository: https://github.com/my_org/my_repo
+version: 0.0.1
+repository: https://github.com/josiahsrc/draft
 
 environment:
   sdk: ^3.6.1
-
-# Add regular dependencies here.
-dependencies:
-  # path: ^1.8.0
 
 dev_dependencies:
   lints: ^5.0.0
