--- a/packages/draft_annotation/pubspec.yaml
+++ b/packages/draft_annotation/pubspec.yaml
@@ -1,5 +1,5 @@
 name: draft_annotation
-description: A starting point for Dart libraries or applications.
+description: Annotations for the draft package
 version: 0.0.1
 repository: https://github.com/josiahsrc/draft
 
