--- a/packages/draft/pubspec.yaml
+++ b/packages/draft/pubspec.yaml
@@ -1,19 +1,19 @@
 name: draft
 description: Immer, but for dart. Convert between immutable and mutable objects.
-version: 0.0.2
+version: 0.0.4
 repository: https://github.com/josiahsrc/draft
 
 environment:
   sdk: ^3.6.1
 
 dependencies:
-  analyzer: ">=7.0.0 <8.0.0"
+  analyzer: ^6.9.0
   build: ^2.3.1
-  source_gen: ^2.0.0
+  source_gen: ^1.0.0
   draft_annotation: ^0.0.1
 
 dev_dependencies:
   lints: ^5.0.0
   test: ^1.24.0
   build_test: ^2.2.3
-  build_runner: ^2.4.15
+  build_runner: ^2.3.3
