--- a/packages/draft/pubspec.yaml
+++ b/packages/draft/pubspec.yaml
@@ -10,7 +10,8 @@ dependencies:
   analyzer: ^6.9.0
   build: ^2.3.1
   source_gen: ^1.0.0
-  draft_annotation: ^0.0.1
+  draft_annotation:
+    path: ../draft_annotation
 
 dev_dependencies:
   lints: ^5.0.0
