--- a/packages/draft/pubspec.yaml
+++ b/packages/draft/pubspec.yaml
@@ -1,6 +1,6 @@
 name: draft
 description: Immer, but for dart. Convert between immutable and mutable objects.
-version: 0.0.4
+version: 0.0.5
 repository: https://github.com/josiahsrc/draft
 
 environment:
@@ -10,11 +10,11 @@ dependencies:
   analyzer: ^6.9.0
   build: ^2.3.1
   source_gen: ^1.0.0
-  draft_annotation:
-    path: ../draft_annotation
+  draft_annotation: ^0.0.2
 
 dev_dependencies:
   lints: ^5.0.0
   test: ^1.24.0
   build_test: ^2.2.3
   build_runner: ^2.3.3
+  collection: ^1.19.1
