--- a/packages/draft_builder/example/pubspec.yaml
+++ b/packages/draft_builder/example/pubspec.yaml
@@ -8,17 +8,17 @@ environment:
 
 dependencies:
   draft:
-    path: ../
+    path: ../../draft
 
 dev_dependencies:
   lints: ^5.0.0
   test: ^1.24.0
   build_runner:
   draft_builder:
-    path: ../../draft_builder
+    path: ../
 
 dependency_overrides:
-  draft_builder:
-    path: ../../draft_builder
   draft:
+    path: ../../draft
+  draft_builder:
     path: ../
