fix builder scripts

--- a/packages/draft_builder/build.yaml
+++ b/packages/draft_builder/build.yaml
@@ -17,7 +17,7 @@ targets:
 
 builders:
   draft:
-    import: "package:draft/builder.dart"
+    import: "package:draft_builder/draft_builder.dart"
     builder_factories: ["draftBuilder"]
     build_extensions: { ".dart": [".draft.dart"] }
     auto_apply: dependents
