--- a/packages/draft_builder/pubspec.yaml
+++ b/packages/draft_builder/pubspec.yaml
@@ -10,8 +10,7 @@ dependencies:
   analyzer: ^6.9.0
   build: ^2.3.1
   source_gen: ^1.0.0
-  draft:
-    path: ../draft
+  draft: ^0.0.9
 
 dev_dependencies:
   lints: ^5.0.0
