--- a/.github/workflows/draft-builder-test.yml
+++ b/.github/workflows/draft-builder-test.yml
@@ -30,6 +30,9 @@ jobs:
       - name: Install dependencies
         run: dart pub get
 
+      - name: Run generator
+        run: dart run build_runner build --delete-conflicting-outputs
+
       - name: Run tests
         run: dart test
 
@@ -50,6 +53,9 @@ jobs:
 
       - name: Install dependencies
         run: dart pub get
+
+      - name: Run generator
+        run: dart run build_runner build --delete-conflicting-outputs
 
       - name: Verify formatting
         run: dart format --output none --set-exit-if-changed .
