--- a/.github/workflows/draft-builder-release.yml
+++ b/.github/workflows/draft-builder-release.yml
@@ -123,8 +123,11 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           prompt: |
-            Generate a bullet-point changelog list of what changed. Keep each point brief. Focus
-            on high-level improvements and user-facing changes.
+            Generate a markdown bullet-point list of the changes in this release.
+            Do not include any headers (like "Release Notes" or version numbers).
+            Do not include changes from previous versions.
+            Only include changes from the provided diff.
+            Keep points brief and focus on user-facing changes.
           from: ${{ steps.version.outputs.release_from }}
           to: ${{ github.sha }}
           include_start_commit: ${{ steps.version.outputs.previous_tag == '' }}
@@ -146,23 +149,27 @@ jobs:
       - name: Update CHANGELOG
         env:
           NEXT_VERSION: ${{ steps.version.outputs.value }}
+          RELEASE_NOTES: ${{ steps.release_notes.outputs.release-notes }}
         run: |
           set -euo pipefail
-          notes_file="$(mktemp)"
-          cat <<'NOTES' > "$notes_file"
-          ${{ steps.release_notes.outputs.release-notes }}
-          NOTES
 
           changelog_tmp="$(mktemp)"
           {
             printf '## %s\n\n' "${NEXT_VERSION}"
-            cat "$notes_file"
+            echo "$RELEASE_NOTES"
             echo
             cat "${PACKAGE_PATH}/CHANGELOG.md"
           } > "$changelog_tmp"
 
           mv "$changelog_tmp" "${PACKAGE_PATH}/CHANGELOG.md"
-          cat "${PACKAGE_PATH}/CHANGELOG.md"
+
+      - name: Log changes
+        env:
+          NEXT_VERSION: ${{ steps.version.outputs.value }}
+        run: |
+          echo "Bumping version to $NEXT_VERSION"
+          git status
+          git diff
 
       - name: Configure git
         run: |
